--- a/register.html
+++ b/register.html
@@ -38,6 +38,13 @@
                         <span class="input-group-text" id="inputGroup-sizing-default">Last name</span>
                         <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
                       </div>
+
+                      <div class="input-group mb-4">
+                        <span class="input-group-text">Address</span>
+                        <textarea class="form-control" aria-label="With textarea"></textarea>
+                      </div>
+
+
                       <div class="input-group mb-4">
                         <span class="input-group-text" id="inputGroup-sizing-default">Date of birth</span>
                         <input type="date" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
@@ -57,10 +64,7 @@
                             <label class="form-check-label" for="inlineRadio3">Other</label>
                           </div><br>
                     </div>
-                      <div class="input-group">
-                        <span class="input-group-text">Address</span>
-                        <textarea class="form-control" aria-label="With textarea"></textarea>
-                      </div>
+                      
                     
                     <div class="text-center text-white mt-4">
                         <p>Already have an account?   <span><a style="text-decoration: none;" class="text-info " href="./index.html">Log in</a></span></p>
