--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container w-50">
         <div class="row rounded shadow-lg" id="bg-form" style="margin-top: 170px;">
             <div class="text-center text-white"><h1>BARC</h1></div>
-            <div class="col-6">
+            <div class="col-lg-6 col-md-12">
                
                 <div class="text-center text-white mt-3">
                     <h3>Log in</h3>
@@ -38,7 +38,7 @@
 
 
             </div>
-            <div class="col-6">
+            <div class="col-lg-6 col-md-12">
                 <div class="text-center mt-5 "><img class="rounded-pill" width="100%" src="./images/Medical lab blood test from sample tube in human hand.jpg" alt=""></div>
             </div>
         </div>
