--- a/register.html
+++ b/register.html
@@ -12,7 +12,7 @@
     <div class="container w-50">
         <div class="row rounded shadow-lg" id="bg-form">
             <div class="text-center text-white"><h1>BARC</h1></div>
-            <div class="col-6">
+            <div class="col-lg-6 col-md-12">
                 <div class="text-center text-white">
                     <h3>Register</h3>
                 </div>
@@ -76,7 +76,7 @@
 
 
             </div>
-            <div class="col-6">
+            <div class="col-lg-6 col-md-12">
                 <div style="margin-top: 200px;" class="text-center  "><img class="rounded-pill" width="100%" src="./images/Medical lab blood test from sample tube in human hand.jpg" alt=""></div>
             </div>
         </div>
