--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
                 <div class="text-center text-white mt-3">
                     <h3>Log in</h3>
                 </div>
-                <form action="" class="p-4">
+                <form action="" class="">
                     <div class="input-group mt-4">
-                        <span class="input-group-text" id="inputGroup-sizing-default">Username</span>
-                        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+                        <!-- <span class="input-group-text " id="inputGroup-sizing-default">Username</span> -->
+                        <input type="text" placeholder="username" class="form-control border-white" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
                       </div>
                       <div class="input-group mt-4">
-                        <span class="input-group-text" id="inputGroup-sizing-default">Password</span>
-                        <input type="password" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+                        <!-- <span class="input-group-text" id="inputGroup-sizing-default">Password</span> -->
+                        <input type="password" placeholder="password" class="form-control border-white" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
                       </div>
                       <div class="text-center text-white mt-4">
                         <p>New User?   <span><a style="text-decoration: none;" class="text-info " href="./register.html">Register</a></span></p>
