--- a/register.html
+++ b/register.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./style.css">
+    <script src="https://kit.fontawesome.com/d20a973568.js" crossorigin="anonymous"></script>
 </head>
 <body >
     <div class="container w-50">
@@ -16,38 +17,40 @@
                 <div class="text-center text-white">
                     <h3>Register</h3>
                 </div>
-                <form action="" class="p-4">
+                <form action="" class="">
                     <div class="input-group mb-4">
-                        <span class="input-group-text" id="inputGroup-sizing-default">Username</span>
-                        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+                        <!-- <span  class="input-group-text border-white" id="inputGroup-sizing-default"><i class="fa-solid fa-user"></i></span> -->
+                        <input placeholder="username" type="text" class="form-control border-white" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
                       </div>
                       <div class="input-group mb-4">
-                        <span class="input-group-text" id="inputGroup-sizing-default">Password</span>
-                        <input type="password" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+                        <!-- <span class="input-group-text border-white" id="inputGroup-sizing-default">Password</span> -->
+                        <input type="password" placeholder="password" class="form-control border-white" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
                       </div>
                     
                       <div class="input-group mb-4">
-                        <span class="input-group-text" id="inputGroup-sizing-default">Email</span>
-                        <input type="email" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+                        <!-- <span class="input-group-text border-white" id="inputGroup-sizing-default">Email</span> -->
+                        <input type="email" placeholder="email" class="form-control border-white" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
                       </div>
                       <div class="input-group mb-4">
-                        <span class="input-group-text" id="inputGroup-sizing-default">First name</span>
-                        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+                        <!-- <span class="input-group-text border-white" id="inputGroup-sizing-default">First name</span> -->
+                        <input type="text" placeholder="first name" class="form-control border-white" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
                       </div>
                       <div class="input-group mb-4">
-                        <span class="input-group-text" id="inputGroup-sizing-default">Last name</span>
-                        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
-                      </div>
-
-                      <div class="input-group mb-4">
-                        <span class="input-group-text">Address</span>
-                        <textarea class="form-control" aria-label="With textarea"></textarea>
+                        <!-- <span class="input-group-text border-white" id="inputGroup-sizing-default">Last name</span> -->
+                        <input type="text" placeholder="last name" class="form-control border-white" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
                       </div>
 
+                      <div class="input-group mb-4">
+                        <!-- <span class="input-group-text border-white">Address</span> -->
+                        <textarea placeholder="address" class="form-control border-white" aria-label="With textarea"></textarea>
+                      </div>
+
 
                       <div class="input-group mb-4">
-                        <span class="input-group-text" id="inputGroup-sizing-default">Date of birth</span>
-                        <input type="date" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+                        <span class="input-group-text border-white" id="inputGroup-sizing-default">Date of birth</span>
+ 
+
+                        <input name="inp"  type="date" class="form-control border-white" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
                       </div>
                     <div class="mb-4 ms-3 text-white">
                         <label for="">Gender</label><br>
